[package]
edition = "2024"
rust-version = "1.85.0"
name = "h10"
version = "0.6.19"
build = "build.rs"
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Simple HTTP/1.0 Server"
readme = "README.md"
keywords = [
    "http",
    "server",
    "web",
]
categories = [
    "network-programming",
    "web-programming",
    "development-tools",
    "rust-patterns",
]
license = "MIT"
repository = "https://github.com/ancos2505/h10"

[lib]
name = "h10"
path = "src/lib.rs"

[[bin]]
name = "h10-server"
path = "src/main.rs"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[bench]]
name = "max_active_sessions"
path = "benches/max_active_sessions.rs"
harness = false

[[bench]]
name = "req_1000"
path = "benches/req_1000.rs"
harness = false

[dependencies.html-rs]
version = "0.3"
git = "https://github.com/ancos2505/html-rs.git"

[features]
debug = []
default = []

[badges.maintenance]
status = "experimental"

[lints.clippy]
all = "deny"

[lints.rust]
box-pointers = "allow"
deprecated-in-future = "forbid"
deprecated-safe = "forbid"
elided-lifetimes-in-paths = "forbid"
explicit-outlives-requirements = "forbid"
ffi-unwind-calls = "forbid"
invalid-type-param-default = "forbid"
keyword-idents-2018 = "forbid"
keyword-idents-2024 = "forbid"
let-underscore-drop = "forbid"
macro-use-extern-crate = "forbid"
meta-variable-misuse = "forbid"
missing-abi = "forbid"
missing-debug-implementations = "forbid"
missing-unsafe-on-extern = "forbid"
non-ascii-idents = "forbid"
non-local-definitions = "forbid"
patterns-in-fns-without-body = "forbid"
redundant-lifetimes = "forbid"
rust-2021-incompatible-closure-captures = "forbid"
rust-2021-incompatible-or-patterns = "forbid"
rust-2021-prefixes-incompatible-syntax = "forbid"
rust-2021-prelude-collisions = "forbid"
single-use-lifetimes = "forbid"
trivial-casts = "deny"
trivial-numeric-casts = "forbid"
unit-bindings = "forbid"
unnameable-types = "forbid"
unsafe-code = "forbid"
unsafe-op-in-unsafe-fn = "forbid"
unstable-features = "forbid"
unused-extern-crates = "forbid"
unused-import-braces = "forbid"
unused-lifetimes = "forbid"
unused-macro-rules = "forbid"
unused-qualifications = "forbid"
unused-results = "allow"
variant-size-differences = "forbid"
